--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PolymerExpressions",
+  "name": "polymer-expressions",
   "version": "0.0.0",
   "description": "README.md",
   "main": "grunt.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Polymer/PolymerExpressions.git"
+    "url": "https://github.com/Polymer/polymer-expressions.git"
   },
   "author": "",
   "license": "Apache License 2.0",
