--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -18,6 +18,8 @@
     "grunt": "*",
     "grunt-karma": "*",
     "karma-mocha": "*",
+    "karma-ie-launcher": "*",
+    "karma-safari-launcher": "*",
     "karma-script-launcher": "*",
     "karma-crbot-reporter": "*"
   }
