test: use custom chrome launcher branch to enable harmony

--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -18,6 +18,7 @@
     "grunt": "~0.4.1",
     "grunt-karma": "*",
     "karma-mocha": "*",
+		"karma-chrome-launcher": "morethanreal/karma-chrome-launcher",
     "karma-ie-launcher": "*",
     "karma-safari-launcher": "*",
     "karma-script-launcher": "*",
