s/Polymer/polymer wrt GitHub

--- a/packages/expressions/bower.json
+++ b/packages/expressions/bower.json
@@ -6,7 +6,7 @@
     "The Polymer Authors"
   ],
   "dependencies": {
-    "TemplateBinding": "Polymer/TemplateBinding#master"
+    "TemplateBinding": "polymer/TemplateBinding#master"
   },
   "license": "BSD",
   "private": true,
