Revert "s/Polymer/polymer wrt GitHub"
This reverts commit 46d83665ba843fde505eebfac2037eac232d8cf7.

--- a/packages/expressions/bower.json
+++ b/packages/expressions/bower.json
@@ -6,7 +6,7 @@
     "The Polymer Authors"
   ],
   "dependencies": {
-    "TemplateBinding": "polymer/TemplateBinding#master"
+    "TemplateBinding": "Polymer/TemplateBinding#master"
   },
   "license": "BSD",
   "private": true,
