--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -17,8 +17,10 @@
     "mocha": ">=1.9",
     "grunt": "~0.4.1",
     "grunt-karma": "*",
+    "karma": "~0.12.0",
     "karma-mocha": "*",
     "karma-ie-launcher": "*",
+    "karma-firefox-launcher": "*",
     "karma-safari-launcher": "*",
     "karma-script-launcher": "*",
     "karma-crbot-reporter": "*",
