--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -1,29 +1,15 @@
 {
   "name": "polymer-expressions",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "description": "README.md",
-  "main": "grunt.js",
-  "directories": {
-    "test": "tests"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Polymer/polymer-expressions.git"
   },
-  "author": "",
+  "author": "The Polymer Authors",
   "license": "Apache License 2.0",
   "devDependencies": {
     "chai": "*",
     "mocha": ">=1.9",
-    "grunt": "~0.4.1",
-    "grunt-karma": "*",
-    "karma": "~0.12.0",
-    "karma-mocha": "*",
-    "karma-ie-launcher": "*",
-    "karma-firefox-launcher": "*",
-    "karma-safari-launcher": "*",
-    "karma-script-launcher": "*",
-    "karma-crbot-reporter": "*",
-    "grunt-contrib-concat": "~0.3.0"
   }
 }
