--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -10,6 +10,10 @@
   "license": "Apache License 2.0",
   "devDependencies": {
     "chai": "*",
-    "mocha": ">=1.9",
+    "mocha": ">=1.9"
+  },
+  "dependencies": {
+    "benchmark": "^1.0.0",
+    "microtime": "^1.4.2"
   }
 }
