--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -10,6 +10,10 @@
   "license": "Apache License 2.0",
   "devDependencies": {
     "chai": "*",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-uglify": "^1.2.0",
     "mocha": ">=1.9"
   },
   "dependencies": {
