--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -6,18 +6,27 @@
     "type": "git",
     "url": "https://github.com/Polymer/polymer-expressions.git"
   },
-  "author": "The Polymer Authors",
-  "license": "Apache License 2.0",
-  "devDependencies": {
-    "chai": "*",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^5.3.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-uglify": "^1.4.2",
-    "mocha": ">=1.9"
+  "scripts": {
+    "build": "gulp npm",
+    "pretest": "gulp build",
+    "test": "mocha build/test",
+    "prepublish": "gulp npm"
   },
-  "dependencies": {
+  "author": "The Polymer Authors",
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "babel-plugin-transform-es2015-modules-amd": "^6.3.13",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
     "benchmark": "^1.0.0",
-    "microtime": "^1.4.2"
+    "chai": "*",
+    "event-stream": "^3.3.2",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-if": "^2.0.0",
+    "gulp-uglify": "^1.4.2",
+    "microtime": "^1.4.2",
+    "mocha": ">=1.9"
   }
 }
