--- a/packages/expressions/bower.json
+++ b/packages/expressions/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "polymer-expressions",
-  "version": "2.0.0",
+  "version": "2.0.0-pre.1",
   "homepage": "https://github.com/Polymer/polymer-expressions",
   "authors": [
     "The Polymer Authors"
