--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polymer-expressions",
-  "version": "2.0.0",
+  "version": "2.0.0-pre.1",
   "description": "README.md",
   "repository": {
     "type": "git",
