--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -24,8 +24,7 @@
     "benchmark": "^1.0.0",
     "chai": "^3.5.0",
     "mocha": ">=1.9",
-    "tslint": "^4.0.1",
-    "typescript": "^2.0.10",
+    "typescript": "^4.2.0-beta",
     "watchy": "^0.6.6"
   }
 }
