Add files to package.json

--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -12,6 +12,12 @@
     ".": "./index.js",
     "./lib/*": "./lib/*.js"
   },
+  "files": [
+    "index.*",
+    "lib/*",
+    "src/*.ts",
+    "src/lib/*"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "mocha --ui tdd test/*.js",
