--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -30,7 +30,7 @@
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "prettier": "^2.2.1",
-    "typescript": "^4.2.0-beta",
+    "typescript": "^4.2.0",
     "watchy": "^0.9.9"
   }
 }
