--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -29,14 +29,10 @@
   "license": "BSD 3-Clause",
   "devDependencies": {
     "@types/benchmark": "^2.1.0",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
+    "@types/node": "^20.11.30",
     "benchmark": "^2.1.4",
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1",
     "prettier": "^2.2.1",
     "typescript": "^4.2.0",
-    "watchy": "^0.9.9",
     "wireit": "^0.14.4"
   },
   "wireit": {
@@ -53,7 +49,7 @@
       "clean": "if-file-deleted"
     },
     "test": {
-      "command": "mocha --ui tdd test/*.js",
+      "command": "node --test-reporter spec --test test/*_test.js",
       "dependencies": [
         "build"
       ],
