--- a/packages/expressions/tsconfig.json
+++ b/packages/expressions/tsconfig.json
@@ -16,7 +16,8 @@
     "declaration": true,
     "sourceMap": true,
     "pretty": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
   },
   "include": ["src/**/*.ts"],
   "exclude": []
