--- a/packages/expressions/tsconfig.json
+++ b/packages/expressions/tsconfig.json
@@ -17,7 +17,7 @@
     "sourceMap": true,
     "pretty": true,
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts"],
   "exclude": []
