--- a/packages/expressions/tsconfig.json
+++ b/packages/expressions/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2019",
-    "module": "esnext",
-    "moduleResolution": "node",
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "isolatedModules": false,
     "strict": true,
     "noImplicitAny": true,
