--- a/packages/expressions/tsconfig.json
+++ b/packages/expressions/tsconfig.json
@@ -1,23 +1,11 @@
 {
+  "extends": "../../tsconfig-base.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "isolatedModules": false,
-    "strict": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitThis": true,
-    "removeComments": false,
-    "preserveConstEnums": true,
-    "outDir": ".",
-    "declaration": true,
-    "sourceMap": true,
-    "pretty": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true
+    "tsBuildInfoFile": "./.tsbuildinfo",
+    "outDir": "./",
+    "rootDir": "./src"
   },
   "include": ["src/**/*.ts"],
-  "exclude": []
+  "exclude": [],
+  "references": []
 }
