--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -23,18 +23,14 @@
     "build": "wireit",
     "test": "wireit",
     "prepublish": "npm test",
-    "benchmark": "wireit",
-    "format": "prettier \"**/*.{json,md,ts}\" --write"
+    "benchmark": "wireit"
   },
   "author": "Justin Fagnani",
   "license": "BSD 3-Clause",
   "devDependencies": {
     "@types/benchmark": "^2.1.5",
-    "@types/node": "^20.11.30",
-    "benchmark": "^2.1.4",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.2",
-    "wireit": "^0.14.4"
+    "@types/node": "^22.5.4",
+    "benchmark": "^2.1.4"
   },
   "wireit": {
     "build": {
