--- a/packages/templates/tsconfig.json
+++ b/packages/templates/tsconfig.json
@@ -1,29 +1,12 @@
 {
+  "extends": "../../tsconfig-base.json",
   "compilerOptions": {
-    "target": "es2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "lib": ["es2022", "DOM", "DOM.Iterable"],
-    "isolatedModules": false,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "declaration": true,
-    "sourceMap": true,
-    "declarationMap": true,
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "removeComments": false,
-    "preserveConstEnums": true,
-    "rootDir": "./src",
-    "outDir": ".",
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true
+    "tsBuildInfoFile": "./.tsbuildinfo",
+    "lib": ["ES2023", "DOM", "DOM.Iterable"],
+    "outDir": "./",
+    "rootDir": "./src"
   },
   "include": ["src/**/*.ts"],
-  "exclude": []
+  "exclude": [],
+  "references": []
 }
