--- a/packages/element/tsconfig.json
+++ b/packages/element/tsconfig.json
@@ -1,25 +1,12 @@
 {
+  "extends": "../../tsconfig-base.json",
   "compilerOptions": {
-    "incremental": true,
-    "target": "es2022", 
-    "module": "NodeNext", 
-    "moduleResolution": "NodeNext",
-    "lib": ["DOM", "es2020", "DOM.Iterable"], 
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "outDir": "./", 
-    "rootDir": "./src", 
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true 
+    "tsBuildInfoFile": "./.tsbuildinfo",
+    "lib": ["ES2023", "DOM", "DOM.Iterable"],
+    "outDir": "./",
+    "rootDir": "./src"
   },
   "include": ["src/**/*.ts"],
-  "exclude": []
+  "exclude": [],
+  "references": []
 }
