--- a/.prettierignore
+++ b/.prettierignore
@@ -8,6 +8,20 @@ node_modules/
 
 .tsbuildinfo
 
+packages/element/node_modules
+packages/element/test
+packages/element/.wireit
+
+packages/element/demo/*.d.ts
+packages/element/demo/*.d.ts.map
+packages/element/demo/*.js
+packages/element/demo/*.js.map
+
+packages/element/**/*.tsbuildinfo
+
+packages/element/index.*
+packages/element/base-element.*
+
 packages/expressions/benchmark
 packages/expressions/lib
 packages/expressions/test
