--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "wireit": {
     "build": {
       "dependencies": [
+        "./packages/components:build",
         "./packages/element:build",
         "./packages/expressions:build",
         "./packages/templates:build"
@@ -30,6 +31,7 @@
     },
     "test": {
       "dependencies": [
+        "./packages/components:test",
         "./packages/element:test",
         "./packages/expressions:test",
         "./packages/templates:test"
