--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -8,9 +8,5 @@
   },
   "include": ["src/**/*.ts"],
   "exclude": [],
-  "references": [
-    {
-      "path": "../templates"
-    }
-  ]
+  "references": []
 }
