--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -8,5 +8,12 @@
   },
   "include": ["src/**/*.ts"],
   "exclude": [],
-  "references": []
+  "references": [
+    {
+      "path": "../element"
+    },
+    {
+      "path": "../templates"
+    }
+  ]
 }
