--- a/packages/templates/package.json
+++ b/packages/templates/package.json
@@ -46,7 +46,7 @@
     "lit-html",
     "template"
   ],
-  "author": "Justin Fagnani <justin@fagnani.com>",
+  "author": "Elematic Software, Inc.",
   "license": "MIT",
   "repository": {
     "type": "git",
