--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -25,7 +25,7 @@
     "prepublish": "npm test",
     "benchmark": "wireit"
   },
-  "author": "Justin Fagnani",
+  "author": "Elematic Software, Inc.",
   "license": "BSD 3-Clause",
   "devDependencies": {
     "@types/benchmark": "^2.1.5",
