[all] Update files field in package.json

--- a/packages/expressions/package.json
+++ b/packages/expressions/package.json
@@ -16,8 +16,9 @@
   "files": [
     "index.*",
     "lib/*",
-    "src/*.ts",
-    "src/lib/*"
+    "src/*",
+    "!src/benchmark/*",
+    "!src/test/*"
   ],
   "scripts": {
     "build": "wireit",
